added CLI support

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "colors": "latest",
         "progress": "latest"
     },
+    "preferGlobal": "true",
+    "bin": "main.js",
     "keywords": [
         "jandan",
         "crawler"
